--- a/examples/three-wechat/miniprogram/pages/index/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxss
@@ -3,8 +3,8 @@
 .page {
   display: flex;
   flex-direction: column;
-  width: 750rpx;
-  height:750rpx;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   position: fixed;
   z-index: 0;
