--- a/examples/three-wechat/miniprogram/pages/empty/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/empty/index.wxss
@@ -1,6 +1,6 @@
 .container {
   overflow-x: hidden;
-  height: 750rpx;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,9 +10,9 @@
 .three-wrapper {
   position: absolute;
   left:0;
+  right:0;
   top:0;
-  width:750rpx;
-  height:1280rpx;
+  bottom:0;
   z-index:0;
   overflow: hidden;
 }
