--- a/examples/three-wechat/miniprogram/pages/empty/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/empty/index.wxss
@@ -9,10 +9,10 @@
 
 .three-wrapper {
   position: absolute;
-  left:0;
-  right:0;
-  top:0;
-  bottom:0;
-  z-index:0;
+  left: 0;
+  top: 0;
+  width: 750rpx;
+  height: 1280rpx;
+  z-index: 0;
   overflow: hidden;
 }
