--- a/examples/three-wechat/miniprogram/pages/index/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 750rpx;
-  height: 100%;
+  height: 1280rpx;
   overflow: hidden;
   position: fixed;
   z-index: 0;
