--- a/examples/three-wechat/miniprogram/pages/index/index.wxml
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxml
@@ -17,6 +17,6 @@
     </view>
   </view>
   <view class="tab-wrapper {{showSwingDegreeTab?'fade-slide-y-tab-origin':'fade-slide-y-tab-enter'}}">
-    <Tab tabs="{{tabList}}" activeTabId="{{activeTab}}" bind:tabClicked="tabClicked" disable="{{transforming && !showSwingDegreeTab}}"></Tab>
+    <Tab tabs="{{tabList}}" activeTabId="{{activeTab}}" bind:tabClicked="tabClicked" disable="{{transforming || !showSwingDegreeTab}}"></Tab>
   </view>
 </view>
