--- a/examples/three-wechat/miniprogram/pages/index/index.wxml
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxml
@@ -19,4 +19,8 @@
   <view class="tab-wrapper {{showSwingDegreeTab?'fade-slide-y-tab-origin':'fade-slide-y-tab-enter'}}">
     <Tab tabs="{{tabList}}" activeTabId="{{activeTab}}" bind:tabClicked="tabClicked" disable="{{transforming || !showSwingDegreeTab}}"></Tab>
   </view>
+  <view class="tips2 {{showSwingDegreeTips?swingDegreeTipsTransitionName+'-origin':swingDegreeTipsTransitionName+'-enter'}}">
+    <text class="swing-degree">{{ tips2 }}</text>
+    <text class="swing-degree-label">左右摇头范围</text>
+  </view>
 </view>
