--- a/examples/three-wechat/miniprogram/pages/index/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxss
@@ -196,3 +196,52 @@
   transform: translateY(0);
   transition: opacity var(--anim-duration), transform var(--anim-duration);
 }
+
+.tips2 {
+  position: absolute;
+  top: 75px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.swing-degree {
+  font-family: PingFangSC-Semibold;
+  font-size: 36px;
+  color: #2e374c;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 36px;
+  font-weight: 600;
+}
+.swing-degree-label {
+  font-family: PingFangSC-Regular;
+  font-size: 12px;
+  color: #737e94;
+  text-align: center;
+  line-height: 12px;
+  font-weight: 400;
+  margin-top: 8px;
+}
+.fade-slide-x-enter {
+  opacity: 0;
+  transform: translateX(-100px); /* 初始位置向上偏移 */
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
+.fade-slide-x-origin {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
+.fade-slide-y-enter {
+  opacity: 0;
+  transform: translateY(-30px);
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
+.fade-slide-y-origin {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
