--- a/examples/three-wechat/miniprogram/pages/index/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxss
@@ -245,3 +245,60 @@
   transform: translateY(0);
   transition: opacity var(--anim-duration), transform var(--anim-duration);
 }
+
+.switch-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 60px;
+  z-index:1;
+}
+.switch-icon {
+  width: 48px;
+  height: 48px;
+}
+.loading-bg {
+  width: 47px;
+  height: 47px;
+  border-radius: 48px;
+}
+.switch-label-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.switch-label {
+  font-family: PingFangSC-Regular;
+  font-size: 12px;
+  color: #2e374c;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 12px;
+  font-weight: 400;
+}
+.switch-label-line {
+  width: 1px;
+  height: 11px;
+  background-color: #bbbbbb;
+  margin-left: 5.5px;
+  margin-right: 5.5px;
+}
+.fade-slide-y-switch-enter {
+  opacity: 0;
+  transform: translate(0, 60px);
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
+.fade-slide-y-switch-origin {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
+.loading {
+  width: 24px;
+  height: 24px;
+}
