--- a/examples/three-wechat/miniprogram/pages/index/index.wxss
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxss
@@ -254,7 +254,7 @@
   left: 0;
   right: 0;
   bottom: 60px;
-  z-index:1;
+  z-index: 1;
 }
 .switch-icon {
   width: 48px;
@@ -301,4 +301,14 @@
 .loading {
   width: 24px;
   height: 24px;
+}
+.fade-slide-y-fix-enter {
+  opacity: 0;
+  transform: translateY(30px); /* 初始位置向上偏移 */
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
+}
+.fade-slide-y-fix-origin {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity var(--anim-duration), transform var(--anim-duration);
 }
