上下摇头选项 显示

--- a/examples/three-wechat/miniprogram/pages/index/index.wxml
+++ b/examples/three-wechat/miniprogram/pages/index/index.wxml
@@ -45,4 +45,9 @@
       <text class="switch-label">{{ switchObj.statusText }}</text>
     </view>
   </view>
+  <view class="up-switch-wrapper flex-rcc {{upPanel.show?'fade-slide-y-switch-origin':'fade-slide-y-switch-enter'}}">
+    <view wx:for="{{upPanel.options}}" wx:key="*this" class="up-option {{item === activeUdOption?'up-option-active':'' }}" bindtap="udOptionClick">
+      {{ item + '°' }}
+    </view>
+  </view>
 </view>
